fix script settings panel overflow

--- a/app/assets/stylesheets/terrier/scripts.scss
+++ b/app/assets/stylesheets/terrier/scripts.scss
@@ -278,7 +278,6 @@ form.script-editor {
 			background-color: #fff;
 			padding: 8px;
 			border-bottom: 1px solid rgba(#000, 0.15);
-			overflow-y: hidden;
 			margin: $panel-pad/2 $panel-pad;
 			&:last-child {
 				margin-bottom: $panel-pad;
